# board-game-components

./: .gitignore  README.md  generate
01.KMahjonggLayout/desktop/: CMakeLists.txt
01.KMahjonggLayout/desktop/src/: Features.txt  format.h  layout.h  main.h  render.h  resource.h  scene.h
01.Layout/: CMakeLists.txt
01.Layout/android/app/: CMakeLists.txt  build.gradle
01.Layout/android/app/src/main/: AndroidManifest.xml
01.Layout/android/app/src/main/cpp/: Features.txt  core.h  library.cpp  mahjong.h  main.h  render.h  scene.h
01.Layout/android/app/src/main/java/: MainActivity.java
01.Layout/android/app/src/main/res/layout/: activity_main.xml
01.Layout/android/app/src/main/res/values/: strings.xml
01.Layout/desktop/: CMakeLists.txt
01.Layout/desktop/src/: Features.txt  core.h  mahjong.h  main.h  render.h  resource.h  scene.h
01.Layout/ios/omc01.xcodeproj/: project.pbxproj
01.Layout/ios/src/: Features.txt  main.h  render.h  resource.h
01.Layout/web/: CMakeLists.txt
01.Layout/web/src/: Features.txt  mahjong.h  main.cpp  main.h  render.h  resource.h  scene.h
02.Theme/: CMakeLists.txt
02.Theme/android/app/: CMakeLists.txt  build.gradle
02.Theme/android/app/src/main/: AndroidManifest.xml
02.Theme/android/app/src/main/cpp/: Features.txt  library.cpp  main.h
02.Theme/android/app/src/main/java/: MainActivity.java
02.Theme/android/app/src/main/res/layout/: activity_main.xml
02.Theme/android/app/src/main/res/values/: strings.xml
02.Theme/desktop/: CMakeLists.txt
02.Theme/desktop/src/: Features.txt  format.h  log.h  main.cpp  main.h  render.h  resource.h  scene.h
02.Theme/ios/omc02.xcodeproj/: project.pbxproj
02.Theme/ios/src/: Features.txt  ios.mm  main.h  render.h  scene.h
02.Theme/web/: CMakeLists.txt
02.Theme/web/src/: Features.txt  format.h  log.h  main.cpp  main.h  render.h  resource.h  scene.h
02.TileTheme/desktop/: CMakeLists.txt
02.TileTheme/desktop/src/: Features.txt  main.cpp  main.h  render.h  resource.h  scene.h
03.MatchTiles/: CMakeLists.txt
03.MatchTiles/android/app/: build.gradle
03.MatchTiles/desktop/src/: Features.txt  format.h  main.h  render.h
03.MatchTiles/ios/omc03.xcodeproj/: project.pbxproj
03.MatchTiles/ios/src/: Features.txt  ios.h  mahjong.h  main.h  render.h  resource.h
03.MatchTiles/web/src/: Features.txt  mahjong.h  main.cpp  main.h  render.h  scene.h
03.RemoteLayoutTheme/: CMakeLists.txt
03.RemoteLayoutTheme/desktop/: CMakeLists.txt
03.RemoteLayoutTheme/desktop/src/: Features.txt  core.h  format.h  mahjong.h  main.cpp  main.h  network.h  render.h  resource.h
03.RemoteLayoutTheme/web/: CMakeLists.txt
03.RemoteLayoutTheme/web/src/: Features.txt  core.h  format.h  mahjong.h  main.cpp  main.h  network.h  render.h  resource.h  scene.h
04.MatchTiles/: CMakeLists.txt
04.MatchTiles/desktop/src/: Features.txt  format.h  input.h  log.h  mahjong.h  main.cpp  main.h  render.h  resource.h  scene.h
04.MatchTiles/web/: CMakeLists.txt
04.MatchTiles/web/src/: Features.txt  core.h  main.h  render.h  resource.h  scene.h
04.RemoteLayoutTheme/: CMakeLists.txt
04.RemoteLayoutTheme/desktop/src/: Features.txt  format.h  mahjong.h  main.h  render.h
04.RemoteLayoutTheme/web/src/: mahjong.h  main.h  resource.h
04.SetLayoutThemeSeed/: CMakeLists.txt
04.SetLayoutThemeSeed/android/app/: build.gradle
04.SetLayoutThemeSeed/desktop/src/: Features.txt  layout.h  main.h  resource.h
04.SetLayoutThemeSeed/ios/omc04.xcodeproj/: project.pbxproj
04.SetLayoutThemeSeed/ios/src/: Features.txt  format.h  ios.mm  library.cpp  library.h  mahjong.h  main.h
04.SetLayoutThemeSeed/web/: CMakeLists.txt
04.SetLayoutThemeSeed/web/src/: Features.txt  core.h  format.h  mahjong.h  (+4 more)
05.ColorfulStatus/: CMakeLists.txt
data/: X_shaped.layout.h  cat.layout.h  numbers-theme.png.h  numbers-theme.xcf  ppl-color.frag  ppl-color.frag.h  ppl-color.vert  ppl-color.vert.h  ppl-theme.frag  ppl-theme.frag.h  ppl-theme.vert  ppl-theme.vert.h  short-loss.layout  short-loss.layout.h  short-victory.layout.h  short.layout.h  tile-low-quads.blend  tile-low.blend  tile-low.osgt  tile-low.osgt.h  tile-theme-template.xcf  tile-theme.png.h  tile-theme.xcf  tile.blend
features/android/: Ex01.java  Ex02.java  Ex03.java  Ex04.java  Ex05.java
features/layout/: KMahjonggLayout.cpp  Layout.cpp  MC_LAYOUT_LOG.cpp  kmahjonggLayoutFieldsToPositions.cpp  layoutToString.cpp  linesToKMahjonggLayout.cpp  parseLayout.cpp
features/mahjong/: KMahjonggLayout.cpp  Layout.cpp  MAHJONG_LOG.cpp  MC_MAHJONG_LOG.cpp  OMC_MAHJONG_LOG.cpp  Solitaire.cpp  Tile.cpp  TilePosition+Equality.cpp  TilePosition.cpp  intToTilePosition.cpp  kmahjonggLayoutFieldsToPositions.cpp  layoutToString.cpp  linesToKMahjonggLayout.cpp  matchIds.cpp  orderedLayoutPositions.cpp  parseLayout.cpp  tilePositionToInt.cpp
features/main/: Example+01.cpp  Example+02.cpp  Example+03.cpp  Example+04.cpp  Example+05.cpp  Example+ColorLoading.cpp  Example+ColorLoadingAndSet.cpp  Example+ColorfulStatus.cpp  Example+ColorfulStatusTest.cpp  Example+DefaultLayoutTheme.cpp  Example+Game.cpp  Example+GameState.cpp  Example+InternalLayouts.cpp  Example+InternalThemes.cpp  Example+Layout.cpp  Example+LayoutTest.cpp  Example+MatchTilesTest.cpp  Example+MatchedTilesRemoval.cpp  Example+NodeSelection.cpp  Example+RemoteLayoutTheme.cpp  Example+Scene.cpp  Example+Selection.cpp  Example+SetLayoutThemeSeed.cpp  Example+SetLayoutThemeSeedTest.cpp  Example+Theme.cpp  Example+ThemeTest.cpp  Example+TileMatching.cpp  Example+TileSelection.cpp  Example+TileSelectionDepiction.cpp  Example+TileTheme.cpp  Example+TileThemeTest.cpp  Example+Tiles.cpp  Example+UnmatchedTilesDeselection.cpp  Example+createTiles.cpp  Example+loadLayout.cpp  Example+loadTheme.cpp  MC_MAIN_EXAMPLE_LOG.cpp  MC_MAIN_LOG.cpp  OMC_MAIN_EXAMPLE_LOG.cpp  library+Ex01+JNI-android.cpp  (+7 more)
features/render/: MC_RENDER_TILE_THEME_LOG.cpp  OMC_RENDER_TILE_THEME_LOG.cpp  RENDER_TILE_THEME_LOG.cpp  TileTheme.cpp
features/resource/: expandBitBucketPath.cpp  expandGitHubPath.cpp  expandRemotePath.cpp
tools/: emscripten-arguments  strip-osgt
(+66 files in other folders)
